logs/kraken_tick.log
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1160, in get_code
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/textolytics/nbpy/nbpy/zmq/publishers/kraken_tick.py", line 46
    from python.scripts.zmq.pub_kraken_tick import *
                                                   ^
SyntaxError: import * only allowed at module level
